--- a/src/pages/Home/style.scss
+++ b/src/pages/Home/style.scss
@@ -2,8 +2,9 @@
 
 .home {
   padding: 3rem 2rem;
-  height: 100%;
   box-sizing: border-box;
+  height: 100vh;
+  background-color: $primary;
 
   display: flex;
   flex-direction: column;
